@@ -10,6 +10,8 @@ Revision 0.4.1, released XX-XX-2021
 - Add addon providing a place for features that are not supported by pyasn1;
   addon.RelativeOID is the first add-on feature
 - Add RFC5794 providing the ARIA Encryption Algorithm
+- Add RFC9174 providing naming and extended key usage for the Delay-Tolerant
+  Networking TCP Convergence Layer Version 4
 
 Revision 0.4.0, released 10-07-2021
 -----------------------------------
